--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Urbanlabs.GitHub.io : UrbanLabs Website">
-
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,300italic|Iceland|Raleway+Dots' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Urbanlabs.GitHub.io</title>
@@ -16,10 +16,8 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/urbanlabs">View on GitHub</a>
-
           <h1 id="project_title">Urbanlabs.GitHub.io</h1>
-          <h2 id="project_tagline">UrbanLabs Website</h2>
+          <h2 id="project_tagline"> &#62; technical solutions to urban problems</h2>
 
         </header>
     </div>
@@ -64,7 +62,7 @@
 <h3>
 <a id="team" class="anchor" href="#team" aria-hidden="true"><span class="octicon octicon-link"></span></a>Team</h3>
 
-<p><strong>Employee 1:</strong> <a href="https://github.com/e-lo" class="user-mention">@e-lo</a> is <a href="https://www.linkedin.com/profile/view?id=5649127&amp;trk=nav_responsive_tab_profile">Elizabeth Sall</a>, outgoing Deputy Director for Technology Services for the San Francisco County Transportation Authority and current free-thinker and do-er. She is excited to have the opportunity to share what she has learned from her combined experiences in software development, urban data analysis, public-sector management, and policy development to a variety of clients and needs.</p>
+<p><a href="https://github.com/e-lo" class="user-mention">@e-lo</a> is <a href="https://www.linkedin.com/profile/view?id=5649127&amp;trk=nav_responsive_tab_profile">Elizabeth Sall</a>, outgoing Deputy Director for Technology Services for the San Francisco County Transportation Authority and current free-thinker and do-er. She is excited to have the opportunity to share what she has learned from her combined experiences in software development, urban data analysis, public-sector management, and policy development to a variety of clients and needs.</p>
 
 <p>Elizabeth has specific skills related to:</p>
 
