font selections, colors, etc

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Urbanlabs.GitHub.io : UrbanLabs Website">
+    <meta name="description" content="UrbanLabs.io LLC">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Offside|Plaster|Stint+Ultra+Expanded|Black+Ops+One|Righteous' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,300italic|Iceland|Raleway+Dots' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Urbanlabs.GitHub.io</title>
+    <title>Urbanlabs.io LLC</title>
   </head>
 
   <body>
@@ -16,9 +18,9 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <h1 id="project_title">Urbanlabs.GitHub.io</h1>
-          <h2 id="project_tagline"> &#62; technical solutions to urban problems</h2>
-
+          <h1 id="project_title">Urbanlabs.io LLC</h1>
+          <h2 id="project_tagline"><i class="fa fa-chevron-right"></i> technical solutions to urban problems</h2>
+		  <h2 id="project_iconline"><i class="fa fa-flask"></i>&nbsp;<i class="fa fa-bar-chart"></i>&nbsp;<i class="fa fa-cogs"></i>&nbsp;<i class="fa fa-code"></i>&nbsp;</i><i class="fa fa-bicycle"></i></h1>
         </header>
     </div>
 
@@ -36,7 +38,7 @@
 <p>Here are a few of the types of issues that I love working on:</p>
 
 <ul>
-<li>making public transportation systems that everybody wants to ride</li>
+<li>making public transportation systems that everybody wants to ride </li>
 <li>creating urban environments that make active transportation safe and convenient</li>
 <li>eliminating externalities related to climate change</li>
 <li>incentivizing efficient and affordable land use and development patterns</li>
